adding global context with other thigns
