# openapi.json
@@ -78,6 +78,11 @@
                   "minimum": -9007199254740991,
                   "maximum": 9007199254740991
                },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
                "author_id": {
                   "type": "integer",
                   "minimum": -9007199254740991,
@@ -96,6 +101,7 @@
             },
             "required": [
                "id",
+               "user_id",
                "author_id",
                "title",
                "pub_year",
@@ -110,6 +116,11 @@
                "id": {
                   "type": "integer",
                   "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": 0,
                   "maximum": 9007199254740991
                },
                "author_id": {
@@ -187,6 +198,11 @@
                   "minimum": -9007199254740991,
                   "maximum": 9007199254740991
                },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": 0,
+                  "maximum": 9007199254740991
+               },
                "author_id": {
                   "type": "integer",
                   "minimum": -9007199254740991,
@@ -256,6 +272,11 @@
                   "minimum": -9007199254740991,
                   "maximum": 9007199254740991
                },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
                "name": {
                   "type": "string"
                },
@@ -266,6 +287,7 @@
             },
             "required": [
                "id",
+               "user_id",
                "name",
                "bio"
             ],
@@ -278,6 +300,11 @@
                "id": {
                   "type": "integer",
                   "minimum": -9007199254740991,
+                  "maximum": 9007199254740991
+               },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": 0,
                   "maximum": 9007199254740991
                },
                "name": {
@@ -311,6 +338,11 @@
                   "minimum": -9007199254740991,
                   "maximum": 9007199254740991
                },
+               "user_id": {
+                  "type": "integer",
+                  "minimum": 0,
+                  "maximum": 9007199254740991
+               },
                "name": {
                   "type": "string",
                   "minLength": 1,
@@ -335,7 +367,7 @@
       "parameters": {}
    },
    "paths": {
-      "/auth/signup": {
+      "/signup": {
          "post": {
             "description": "Register a new user",
             "tags": [
@@ -367,7 +399,56 @@
             }
          }
       },
-      "/auth/authorize": {
+      "/me": {
+         "post": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
+            "description": "Logout user and invalidate tokens",
+            "tags": [
+               "Authentication"
+            ],
+            "responses": {
+               "200": {
+                  "description": "Decoded Token",
+                  "content": {
+                     "application/json": {
+                        "schema": {
+                           "$ref": "#/components/schemas/User"
+                        }
+                     }
+                  }
+               },
+               "401": {
+                  "description": "Invalid token"
+               }
+            }
+         }
+      },
+      "/logout": {
+         "post": {
+            "security": [
+               {
+                  "bearerAuth": []
+               }
+            ],
+            "description": "Logout user and invalidate tokens",
+            "tags": [
+               "Authentication"
+            ],
+            "responses": {
+               "200": {
+                  "description": "Successfully logged out"
+               },
+               "401": {
+                  "description": "Invalid token"
+               }
+            }
+         }
+      },
+      "/access-token": {
          "post": {
             "description": "Authorize user credentials",
             "tags": [
@@ -385,21 +466,13 @@
             "responses": {
                "200": {
                   "description": "Authorization successful",
-                  "headers": {
-                     "Set-Cookie": {
-                        "schema": {
-                           "type": "string",
-                           "example": "Authorization=Bearer {jwt}; HttpOnly; Secure; SameSite=Strict"
-                        }
-                     }
-                  },
                   "content": {
                      "application/json": {
                         "schema": {
                            "type": "object",
                            "properties": {
-                              "user": {
-                                 "$ref": "#/components/schemas/User"
+                              "type": {
+                                 "type": "string"
                               },
                               "token": {
                                  "type": "string",
@@ -407,7 +480,7 @@
                               }
                            },
                            "required": [
-                              "user",
+                              "type",
                               "token"
                            ],
                            "description": "Authentication response with user data and JWT token",
@@ -421,48 +494,6 @@
                },
                "404": {
                   "description": "Username not found"
-               }
-            }
-         }
-      },
-      "/auth/access-token": {
-         "post": {
-            "security": [
-               {
-                  "bearerAuth": []
-               }
-            ],
-            "description": "Get access token with refresh token",
-            "tags": [
-               "Authentication"
-            ],
-            "responses": {
-               "200": {
-                  "description": "New access token generated"
-               },
-               "401": {
-                  "description": "Invalid or expired refresh token"
-               }
-            }
-         }
-      },
-      "/auth/logout": {
-         "post": {
-            "security": [
-               {
-                  "bearerAuth": []
-               }
-            ],
-            "description": "Logout user and invalidate tokens",
-            "tags": [
-               "Authentication"
-            ],
-            "responses": {
-               "200": {
-                  "description": "Successfully logged out"
-               },
-               "401": {
-                  "description": "Invalid token"
                }
             }
          }
